# Product-Market-Research-Multiagent-with-CrewAI

./: README.md  pyproject.toml
src/market_research/: crew.py  main.py
src/market_research/config/: agents.yaml
