[project]
name = "market_research"
version = "0.1.0"
description = "Market Research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
market_research = "market_research.main:run"
run_crew = "market_research.main:run"
train = "market_research.main:train"
replay = "market_research.main:replay"
test = "market_research.main:test"
run_with_trigger = "market_research.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
